# pixelwars3-backend

./: .gitignore  Makefile  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: d067d9919fdd_create_verified_user.py
pixelwars3/: handlers.py  main.py  routes.py
pixelwars3/core/: database.py
pixelwars3/core/settings/: __init__.py  app_settings.py  base_app_settings.py
pixelwars3/field/: connection_manager.py  data.py  schemas.py
pixelwars3/field/api/: v1.py
pixelwars3/user/: models.py  schemas.py
pixelwars3/user/api/: v1.py
templates/: index.html
